implementa CRUD completo da entidade Categoria
